# ai-subtitle-translator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/subtitle_translator/: config.py  main.py
src/subtitle_translator/api/: models.py  routes.py
src/subtitle_translator/core/: batch_processor.py  srt_parser.py  translator.py
src/subtitle_translator/providers/: base.py  openrouter.py
src/subtitle_translator/queue/: __init__.py  job_manager.py  worker.py
tests/: battle_royale_50_lines.py  elimination_battle_royale.py  test_api.py  test_translator.py
